expose advocates type in schema, add type safety to landing page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres
+    image: docker.io/postgres # include docker.io for podman
     restart: always
     environment:
       POSTGRES_USER: postgres
